Add support for using a sync xframework for spm
Using a prebuilt framework rather than building core from source lets us
support sync. Setting the REALM_BUILD_FROM_SOURCE environment variable will
restore the old behavior of building from source (but not supporting sync) as
it's useful for debugging and sanitizer testing.

--- a/.jenkins.yml
+++ b/.jenkins.yml
@@ -587,6 +587,10 @@ exclude:
     target: swiftpm
     configuration: Debug
 
+  - xcode_version: 11.3
+    target: swiftpm
+    configuration: Release
+
   - xcode_version: 11.4.1
     target: swiftpm
     configuration: Debug
@@ -610,10 +614,6 @@ exclude:
   - xcode_version: 11.6
     target: swiftpm
     configuration: Release
-
-  - xcode_version: 12.0
-    target: swiftpm
-    configuration: Debug
 
   - xcode_version: 11.3
     target: swiftpm-address
